--- a/client/src/components/Calendar/Calendar.css
+++ b/client/src/components/Calendar/Calendar.css
@@ -102,8 +102,12 @@
     margin: 0 1rem;
   }
   .box {
-    margin: 15% 2% 0 50%;
-    width: 45%;
+    margin: 20% 15% 0 25%;
+    width: 60%;
+  }
+  .close-icon {
+    right: calc(20% - 30px);
+    /* top: calc(20%); */
   }
 }
 
