--- a/client/src/components/Calendar/Calendar.css
+++ b/client/src/components/Calendar/Calendar.css
@@ -93,18 +93,17 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .calendar-event {
+    font-size: small;
+  }
   .calendar-month {
     font-size: 12px;
     font-weight: bold;
     margin: 0 1rem;
   }
   .box {
-    margin: 20% 15% 0 25%;
-    width: 60%;
-  }
-  .close-icon {
-    right: calc(20% - 30px);
-    /* top: calc(20%); */
+    margin: 15% 2% 0 50%;
+    width: 45%;
   }
 }
 
