--- a/client/src/components/EditFooter/index.css
+++ b/client/src/components/EditFooter/index.css
@@ -1,4 +1,4 @@
-#contactBack {
+/* #contactBack {
     display: block;
     margin: auto;
 }
@@ -22,4 +22,4 @@
     width: 100px;
     left: 385px;
     background-color: #e71313;
-}
+} */
